--- a/api/templates/insert_user.html
+++ b/api/templates/insert_user.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Insert User</h1>
-	<form method="POST" action="{{ url_for('add_it_college') }}">
+	<form method="POST" action="{{ url_for('add_member') }}">
 		<label for="first_name">First Name:</label>
 		<input type="text" id="first_name" name="first_name" required>
 		<br>
