--- a/api/templates/insert_user.html
+++ b/api/templates/insert_user.html
@@ -6,21 +6,35 @@
 <body>
 	<h1>Insert User</h1>
 	<form method="POST" action="{{ url_for('add_member') }}">
+
 		<label for="first_name">First Name:</label>
 		<input type="text" id="first_name" name="first_name" required>
 		<br>
+
 		<label for="last_name">Last Name:</label>
 		<input type="text" id="last_name" name="last_name" required>
 		<br>
+
+		<label for="name">Name type:</label>
+		<input type="text" id="name" name="name" required>
+		<br>
+
 		<label for="email">Email:</label>
 		<input type="email" id="email" name="email" required>
 		<br>
+
 		<label for="unique_code">Unique Code:</label>
 		<input type="text" id="unique_code" name="unique_code" required>
 		<br>
-		<label for="type_id">Type ID:</label>
+
+		<label for="type_id">Type ID for it_college:</label>
 		<input type="number" id="type_id" name="type_id" required>
 		<br>
+
+		<label for="id">Type ID for it_college_type:</label>
+		<input type="number" id="id" name="id" required>
+		<br>
+
 		<button type="submit">Add Member</button>
 	</form>
 </body>
