--- a/api/templates/insert_user.html
+++ b/api/templates/insert_user.html
@@ -31,9 +31,9 @@
 		<input type="number" id="type_id" name="type_id" required>
 		<br>
 
-		<label for="id">Type ID for it_college_type:</label>
-		<input type="number" id="id" name="id" required>
-		<br>
+<!--		<label for="id">Type ID for it_college_type:</label>-->
+<!--		<input type="number" id="id" name="id" required>-->
+<!--		<br>-->
 
 		<button type="submit">Add Member</button>
 	</form>
