--- a/api/templates/parser_excel.html
+++ b/api/templates/parser_excel.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form action="{{ url_for('parser_excel') }}" method="post"></form>
-<p>Choose your excel-file</p>
-<input type = "file">
+<label for = "parse">Choose your excel file</label>
+<input type = "file" name = parse id = parse>
 
 </body>
 </html>
