--- a/api/templates/home_page.html
+++ b/api/templates/home_page.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "home_page.css">
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
+  <header>
+      <p>Add new member</p>
+      <p>Get all members</p>
+      <p>Get member by id</p>
+      <p>Delete member by id</p>
+      <p>Parse excel to data base</p>
 
+  </header>
 
 </body>
 </html>
