--- a/api/templates/home_page.html
+++ b/api/templates/home_page.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel = "stylesheet" href = "home_page.css">
     <meta charset="UTF-8">
     <title>Home</title>
+    <style>
+        .container {
+            display: flex;
+            justify-content: space-between;
+            color: #9e22c7;
+            /* border: 2px solid purple; */
+        }
+    </style>
 </head>
 <body>
-  <header>
-      <p>Add new member</p>
-      <p>Get all members</p>
-      <p>Get member by id</p>
-      <p>Delete member by id</p>
-      <p>Parse excel to data base</p>
-
-  </header>
-
+    <div class = "container">
+        <div>Add new member</div>
+        <div>Get all members</div>
+        <div>Get member by id</div>
+        <div>Delete member by id</div>
+        <div>Parse excel to data base</div>
+    </div>
 </body>
 </html>
